--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ body {
 
 h2 {
   font-size: 24px;
+  margin-bottom: 1rem;
+}
+
+p {
+  font-size: 16px;
+  margin-bottom: 1rem;
 }
 
 header {
@@ -37,6 +43,7 @@ main {
   background-color: #fff;
   display: flex;
   justify-content: center;
+  padding: 1rem;
 }
 
 .container {
@@ -44,7 +51,17 @@ main {
   border: 2px solid #ccc;
   border-radius: 20px;
   box-shadow: 5px 2px 10px rgba(3, 3, 3, 0.5);
-  min-height: 300px;
+  min-height: 250px;
   max-width: 500px;
-  padding: 1rem;
+  padding: 2rem;
+}
+
+button {
+  background-color: #218380;
+  color: #fff;
+  cursor: pointer;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 1.2rem;
+  border: none;
+  border-radius: 10px;
 }
