--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,6 @@ body {
   font-size: 16px;
 }
 
-h2 {
-  font-size: 24px;
-  margin-bottom: 1rem;
-}
-
-p {
-  font-size: 16px;
-  margin-bottom: 1rem;
-}
-
 header {
   background-color: #218380;
   color: #fff;
@@ -31,11 +21,16 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1.5rem;
 }
 
-nav a {
+nav a, button a {
   color: #fff;
+  text-decoration: none;
+}
+
+a {
+  color: #000;
   text-decoration: none;
 }
 
@@ -48,12 +43,21 @@ main {
 
 .container {
   margin-top: 100px;
-  border: 2px solid #ccc;
+  border: 1px solid #ccc;
   border-radius: 20px;
-  box-shadow: 5px 2px 10px rgba(3, 3, 3, 0.5);
+  box-shadow: 10px 5px 20px rgba(0, 0, 0, 0.4);
   min-height: 250px;
-  max-width: 500px;
-  padding: 2rem;
+  padding: 3rem;
+}
+
+main h2 {
+  font-size: 24px;
+  margin-bottom: 1rem;
+}
+
+main p {
+  font-size: 16px;
+  margin-bottom: 1rem;
 }
 
 button {
@@ -64,4 +68,18 @@ button {
   padding: 1.2rem;
   border: none;
   border-radius: 10px;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  border: 1px solid #000;
+  gap: 1rem;
+}
+
+
+@media screen and (max-width: 450px ) {
+  .container {
+    padding: 1.5rem;
+  }
 }
