--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,29 @@ input {
   border: 1px solid #bbb;
 }
 
+.login-details {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.details {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
+.details input {
+  width: 300px;
+  padding: 0.5rem;
+}
+
+.login-details .btn {
+  margin-top: 1rem;
+  align-self: center;
+}
+
 .initials {
   display: flex;
   align-items: center;
