--- a/src/App.css
+++ b/src/App.css
@@ -104,12 +104,14 @@ input {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 100%;
+  align-items: center;
 }
 
 .details {
   display: flex;
-  gap: 2rem;
+  flex-direction: column;
+  justify-content: center;
+  gap: 0.5rem;
   align-items: center;
 }
 
