--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ ul {
   padding: 0 0.5rem;
 }
 
-li {
+ul li {
   margin-top: 0.5rem;
   padding: 0.7rem;
   border: none;
@@ -90,9 +90,12 @@ li {
   cursor: pointer;
 }
 
-li:hover {
+ul li:hover {
   transform: scale(0.99);
   transition: 0.2s linear;
+}
+ol li {
+  margin: 20px;
 }
 
 input {
@@ -152,6 +155,11 @@ input {
   padding-top: 1rem;
   border-top: 1px solid #333;
 }
+/* .box {
+  display: flex;
+  flex-direction: column;
+  paddin
+} */
 
 @media screen and (max-width: 450px) {
   .container {
