--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,15 @@ header {
   background-color: #218380;
   color: #fff;
 }
+.header {
+  text-align: center;
+}
+.btn-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 nav {
   max-width: 1200px;
@@ -52,6 +61,15 @@ main {
   max-width: 900px;
   width: 90vw;
   padding: 3rem;
+}
+.landing-container {
+  height: 100vh;
+  width: 90vw;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 main h2 {
