--- a/src/App.css
+++ b/src/App.css
@@ -98,11 +98,6 @@ ul {
   padding: 0 0.5rem;
 }
 
-<<<<<<< HEAD ol {
-  margin-top: 0.5rem;
-  padding: 0.7rem;
-}
-
 ul li {
   margin-top: 0.5rem;
   padding: 0.7rem;
@@ -189,6 +184,14 @@ input {
   display: flex;
   gap: 1rem;
   margin-top: 1.5rem;
+}
+
+.signout {
+  border: 1px solid #218380;
+  padding: 1rem;
+  border-radius: 10px;
+  margin-top: 1rem;
+  display: inline-block;
 }
 
 @media screen and (max-width: 450px) {
