--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ main {
   width: 90vw;
   padding: 3rem;
 }
-.landing-container {
+/* .landing-container {
   height: 100vh;
   width: 90vw;
   margin: auto;
@@ -70,14 +70,14 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
+} */
 
-main h2 {
+h2 {
   font-size: 24px;
   margin-bottom: 1rem;
 }
 
-main p {
+p {
   font-size: 16px;
   margin-bottom: 1rem;
 }
@@ -184,6 +184,15 @@ input {
   display: flex;
   gap: 1rem;
   margin-top: 1.5rem;
+}
+
+.btn-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1.5rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .signout {
