--- a/src/App.css
+++ b/src/App.css
@@ -72,12 +72,12 @@ main {
   justify-content: center;
 } */
 
-h2 {
+main h2 {
   font-size: 24px;
   margin-bottom: 1rem;
 }
 
-p {
+main p {
   font-size: 16px;
   margin-bottom: 1rem;
 }
